# pho_jupyter_preview_widget

./: .gitignore  DEBUGGING.md  README.md  Untitled.ipynb  package-lock.json  package.json  pyproject.toml  webpack.config.js
pho_jupyter_preview_widget/: __init__.py  display_helpers.py  ipython_helpers.py  widget.py
pho_jupyter_preview_widget/array_shape_display/: array_shape_display.py
pho_jupyter_preview_widget/static/js/: widget.js
templating/: pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment
tests/: test_formatter.py
