[project]
name = "pho-jupyter-preview-widget"
version = "0.3.1"
description = "Provides Data Previews for many common data types, such as Numpy Arrays and Pandas Dataframes"
authors = [{ name = "Pho Hale", email = "PhoHale@gmail.com" }]
requires-python = ">=3.9,<3.12"
readme = "README.md"
dependencies = [
    "ipywidgets>=8.1.3,<9",
    "ipykernel>=6.29.5,<7",
    "pandas>=1.5.3,<2",
    "numpy~=1.20",
    "nptyping[complete]>=2.5.0,<3",
    "matplotlib>=3.8.4,<4",
    "jinja2==3.0.3",
    "pyphocorehelpers",
]

[project.optional-dependencies]
notebook = []

[dependency-groups]
dev = ["notebook>=7.2.1,<8"]

[tool.uv]

[tool.uv.sources]
pyphocorehelpers = { path = "../pyPhoCoreHelpers", editable = true }

[tool.hatch.build.targets.sdist]
include = ["pho_jupyter_preview_widget/static/js/widget.bundle.js"]

[tool.hatch.build.targets.wheel]
include = ["pho_jupyter_preview_widget/static/js/widget.bundle.js"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

