[tool.poetry]
name = "pho-jupyter-preview-widget"
version = "1.0.6"
description = "Provides Data Previews for many common data types, such as Numpy Arrays and Pandas Dataframes"
authors = ["Pho Hale <PhoHale@gmail.com>"]
readme = "README.md"
packages = [{include = "pho_jupyter_preview_widget"}]
include = [
    { path = "pho_jupyter_preview_widget/static/js/widget.bundle.js", format = ["sdist", "wheel"]  }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12" # Note: 3.11 is excluded by mamba. Otherwise it works fine.
ipywidgets = "^8.1.3"
ipykernel = "^6.29.5"
pandas = "^1.5.3"
numpy = "^1.20"
nptyping = {extras = ["complete"], version = "^2.5.0"} # allows specifying Numpy and Pandas types and shapes
matplotlib = "^3.8.4"
jinja2 = "3.0.3"
pyphocorehelpers = { path = "../pyPhoCoreHelpers", develop=true}

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"
setuptools = "^79.0.0"
wheel = "^0.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

